--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,16 @@
-body {
-    font-family: Arial, sans-serif;
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -14,6 +23,7 @@ header {
 nav ul.nave {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 nav ul.nave li {
@@ -32,6 +42,7 @@ nav ul.nave li a:hover {
 }
 
 .container {
+    flex: 1;
     padding: 2em;
 }
 
@@ -52,9 +63,7 @@ footer {
     color: white;
     text-align: center;
     padding: 1em 0;
-    position: absolute;
     width: 100%;
-    bottom: 0;
 }
 
 .footer-container {
@@ -81,6 +90,11 @@ footer ul li a {
     color: white;
     text-decoration: none;
 }
+
+footer ul li a:hover {
+    text-decoration: underline;
+}
+
 
 footer ul li a:hover {
     text-decoration: underline;
