--- a/estilo.css
+++ b/estilo.css
@@ -68,34 +68,4 @@ footer {
 
 .footer-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1em;
-}
-
-footer ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-footer ul li {
-    margin-left: 1em;
-}
-
-footer ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-footer ul li a:hover {
-    text-decoration: underline;
-}
-
-
-footer ul li a:hover {
-    text-decoration: underline;
-}
+    justify-content
