--- a/estilo.css
+++ b/estilo.css
@@ -62,6 +62,11 @@ width:50%;
 margin: auto;
 pading:10px;
 }
+form{
+    width:65;
+    margin:auto;
+    text-align:center;
+}
 input[type="text"], textarea {
     width: 40%;
     padding: 10px;
